# Ciguard

./: README.md  pyproject.toml
.github/workflows/: test.yml
ciguard/: cli.py
ciguard/scanner/: ai_detector.py  parser.py  reporter.py  taint.py
