[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caga"
version = "0.1.0"
description = "Detect prompt injection risks in AI-integrated GitHub Actions"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
caga = "ciguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ciguard"]