[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-prompt-scan"
version = "0.1.5"
description = "Detect prompt injection risks in AI-integrated GitHub Actions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
gh-prompt-scan = "ciguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ciguard"]